# ctp-wrapper

./: README.md  ToDo.md
ctp/: meson.build  wrapper.py
ctp/api/: __init__.py  ctp_constant.py  ctpmd.pyi  ctptd.pyi
ctp/generator/: gen.py  gen_cpp.py  gen_datatype.py  gen_func.py  gen_func_const.py  gen_struct.py  gen_util.py
ctp/generator/templates/: ctp_header.j2  ctp_source.j2
ctp/interface/: mdapi.i  tdapi.i
ctp/v/: ctp.h
ctp/v/v6.7.13_20260225/src/ctpmd/: ctpmd.cpp  ctpmd.h
ctp/v/v6.7.13_20260225/src/ctptd/: ctptd.cpp  ctptd.h
demo/: ctp_md.py  ctp_td.py
